# context-based-spell-checker

./: .gitignore  CMakeLists.txt  README.md
cuentos/: Fausto_goethe.txt  RONDA DE VISITAS_james.txt  RUDYARD KIPLING_orwell.txt  RUR_capek.txt  RetratoOvalado_Poe.txt  Rilla_montgomery.txt  Rinconete y cortadillo_cervantes.txt  Robert Louis Stevenson_chesterton.txt  SANTO GRIAL_guenon.txt  SECRETO DEL BARRANCO DE MACARGER_bierce.txt  SECRETOS FEMENINOS_arlt.txt  SENDERO DEL  DISCIPULADO_besant.txt  SENNIN_akutagawa.txt  SIR DOMINICK FERRAND_james.txt  SIRVIENDO A LA HUMANIDAD_bailey_001.txt  SIRVIENDO A LA HUMANIDAD_bailey_002.txt  SIRVIENDO A LA HUMANIDAD_bailey_003.txt  SPLEEN E IDEAL_baudelaire.txt  SUCESO EN EL PUENTE_bierce.txt  SUCESOS NOCTURNOS_bierce.txt  SUENIO DEL REY KAMMA VOOTRA_dunsany.txt  SUENO DE FLAUTAS_hesse.txt  SUICIDIO DE AMOR_Quiroga_H.txt  Salvada_maupassant.txt  Santa Rosa del Peru_moreto.txt  Santuario_faulkner.txt  Sargento Enmascarado_apollinaire.txt  SecretosCorazon_gibran.txt  Segunda Casaca_perez_galdos.txt  Seleccion Poetica_Delcasal.txt  Seleccion de cuentos_joyce.txt  Sendas de Oku_basho.txt  Sentido y sensibilidad_austen.txt  Si_senior_pardo_bazan.txt  Siddhartha_hesse.txt  Sobre el bien o el uno_plotino.txt  Sobre la utilidad de la historia.txt  Socrates Y La Tragedia_nietzsche.txt  Solamente yo_machadoG.txt  Sonetos amor_IDLcruz.txt  (+375 more)
include/: hiddenLayer.h  hiddenNeuron.h  outputLayer.h  outputNeuron.h  perceptron.h  perceptronLayer.h  perceptronNeuron.h  simplePerceptron.h  spellChecker.h  winnow.h
src/: SimplePerceptron.cpp  (+10 more)
